# iouring_tracer

./: .gitignore  .gitmodules  Makefile  README.md  bpf_uring_trace.opam  bpf_uring_trace.opam.template  dune-project  iouring_tracer.opam  todo.org
bpf/: Makefile  defs.h  uring.bpf.c  uring.h
bpf/vmlinux/x86/: vmlinux.h
bpf_uring_events/: Makefile
c_test/: read_seq.c
fxt/: dune  write.ml  write.mli
hook/: Makefile  custom_events.ml  dune  fxt_direct.ml  hook.ml  hook.mli  stubs.c  trace_uring.h
lib/: bfptrace_gen.ml  bpftrace.ml  bpftrace.mli  driver.ml  driver_bak.mli  dune  gen.ml  hooks.ml  iouring_tracer.ml  obpftrace.ml  runtime_events_hook.ml
lib/bpftrace/: bpfgen.bt  bpftrace.ml  bpftrace.mli  dune  gen.ml  intermediate.ml  lexer.bk  lexer.mll  parser.bk  parser.mly  spec_reader.ml  test.ml
lib/bpftrace/bt/: dune  tracepoints.bt
lib/bpftrace_default/: tracepoints.bt
lib/bpftrace_progs/: kprobes.bt  tracepoints.bt
src/: Makefile  defs.h  driver.ml  dune  ring_writer.ml  trace.ml  trace_rings.ml  trace_uring.h  trace_uring.ml  uring.h  uring_ops.h  uring_ops.ml  uring_spans.h  uring_spans.ml  util.ml
src/bindings/: bindings.ml  compile_time.ml  dune  stub_gen.ml
src/bpf_uring_events/: Makefile  common.c  common.h  defs.h  trace_uring.bpf.c  uring_ops.bpf.c  uring_ops.h  uring_spans.bpf.c  uring_spans.h
src/definitions/: const.ml  def_generator.ml  definitions.ml  defs.h  dune  uring.h  uring_ops.h
src/definitions/defs/: dune  uring.ml  uring_ops.ml  uring_spans.ml  uring_trace.ml
src/skel/: dune  skel_driver.ml  skel_stubs.c  test_skel.ml
test/: Makefile  dune  eio_kprobes.ml  eio_sleep.ml  eio_tracepoints.ml  gen_test.ml  iouring.trace  test_binary.ml  test_custom_events.ml  test_eio.ml  test_gen.ml  test_hook.ml  test_hook_fxt.ml  test_interactive.ml  test_progs.ml  test_read_async.ml  trace.txt
test/driver/: Makefile  dune  invalid.bt  test_bt_err.ml  test_prog_err.ml  trace.txt  valid.bt
test/olly/: Makefile  dune  test_eio_1.ml  test_eio_1.trace
test_c/: Makefile  common.c
