(library
 (name hook)
 (foreign_stubs
  (language c)
  (names stubs))
 (c_library_flags -lelf -lz)
 (foreign_archives bpfbundle)
 (libraries threads runtime_events fxt faraday faraday-lwt-unix)
 (preprocess
  (pps ppx_deriving.enum ppx_deriving.show ppx_deriving.ord)))

; Copy header for protoypes

(rule
 (mode
  (promote (until-clean)))
 (action
  (copy# bpf_uring_events/src/trace_uring.h trace_uring.h)))

; Sandbox build

(data_only_dirs bpf_uring_events)

(rule
 (deps
  (source_tree bpf_uring_events))
 (targets libbpfbundle.a)
 (action
  (no-infer
   (progn
    (chdir
     bpf_uring_events/src
     (run make))
    (copy bpf_uring_events/src/.output/libbpfbundle.a libbpfbundle.a)))))
