(library
 (name obpftrace)
 (inline_tests)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.make ppx_expect))
 (libraries unix str logs))

(rule
 (target bpftrace_default.ml)
 (deps
  (source_tree bpftrace_default))
 (action
  (with-stdout-to
   %{target}
   (run ocaml-crunch -m plain bpftrace_default))))
