(library
 (name obpftrace)
 (inline_tests)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.make ppx_expect))
 (libraries unix logs runtime_events tracing bpftrace)
 (modules driver obpftrace))

(executable
 (name runtime_events_hook)
 (modules runtime_events_hook)
 (libraries runtime_events unix))
