(executable
 (public_name trace_uring)
 (name trace_uring)
 (libraries driver bindings fxt)
 (modules trace_uring))

(library
 (name driver)
 (libraries ocaml_libbpf ocaml_libbpf_maps bindings fxt eio_linux)
 (modules driver ring_writer))

(rule
 (mode
  (promote (until-clean)))
 (deps
  (source_tree %{project_root}/bpf))
 (targets uring.bpf.o uring.skel.h)
 (action
  (no-infer
   (progn
    (chdir
     %{project_root}/bpf
     (run make))
    (copy %{project_root}/bpf/output/uring.bpf.o uring.bpf.o)
    (copy %{project_root}/bpf/output/uring.skel.h uring.skel.h)))))

; Try building bpf code with dune?
; (rule
;  (alias bpf)
;  (target trace_uring.bpf.o)
;  (deps trace_uring.bpf.c definitions/defs.h vmlinux.h)
;  (action
;   (run
;    clang
;    -g
;    -O2
;    -target
;    bpf
;    -I
;    definitions
;    -c
;    trace_uring.bpf.c
;    -o
;    %{target})))
