(executable
 (public_name trace_uring)
 (name trace_uring)
 (libraries driver bindings fxt)
 (modules trace_uring))

(library
 (name driver)
 (libraries ocaml_libbpf ocaml_libbpf_maps bindings fxt eio_linux)
 (modules driver writer))

(rule
 (mode
  (promote (until-clean)))
 (deps
  (source_tree %{project_root}/bpf))
 (targets uring.bpf.o uring.skel.h)
 (action
  (no-infer
   (progn
    (chdir
     %{project_root}/bpf
     (run make))
    (copy %{project_root}/bpf/output/uring.bpf.o uring.bpf.o)
    (copy %{project_root}/bpf/output/uring.skel.h uring.skel.h)))))
