; (library
;  (name bindings)
;  (modules uring_generated bindings)
;  (libraries consts ctypes.foreign compile_time ocaml_libbpf))

; Generate C stubs executable

(rule
 (target stub_gen.c)
 (deps %{bin:stub_gen})
 (action
  (with-stdout-to
   %{target}
   (run stub_gen))))

; Compile C stubs executable with uring.h and liburing

(rule
 (target uring.h)
 (action
  (copy# %{project_root}/bpf/uring.h uring.h)))

(rule
 (target stub_gen.o)
 (deps uring.h stub_gen.c)
 (action
  (bash
   "%{cc} %{deps} -I `dirname %{lib:ctypes:ctypes_cstubs_internals.h}` -I %{ocaml_where} -luring -o %{target}")))

; Run stub_gen.o

(rule
 (target uring_generated.ml)
 (deps stub_gen.o)
 (action
  (with-stdout-to
   %{target}
   (run %{deps} -ml))))

(library
 (name bindings)
 (libraries stubs consts))
