(rule
 (target tracepoints.spec)
 (action
  (with-stdout-to
   %{target}
   (bash "sudo bpftrace -vl 'tracepoint:*io_uring*'"))))

(rule
 (target syscalls_only.spec)
 (action
  (with-stdout-to
   %{target}
   (bash "sudo bpftrace -vl 'tracepoint:syscalls:*io_uring*'"))))

(rule
 (target tracepoints_gen.bt)
 (deps tracepoints.spec)
 (action
  (run ../gen.exe %{deps} %{target})))
