; (rule
;  (deps check_root/is_root.txt)
;  (target tracepoints.spec)
;  ; This subdir is necessary for preventing dunes dependency cycle
;  (enabled_if
;   (action
;    (bash 'echo true')))
;  (action
;   (with-stdout-to
;    %{target}
;    (bash "sudo bpftrace -vl 'tracepoint:*io_uring*'"))))

; (rule
;  (target syscalls_only.spec)
;  (action
;   (with-stdout-to
;    %{target}
;    (bash "sudo bpftrace -vl 'tracepoint:syscalls:*io_uring*'"))))

; (rule
;  (target tracepoints_gen.bt)
;  (deps tracepoints.spec)
;  (action
;   (run ../gen.exe %{deps} %{target})))
